Revision history for Git-Raw

{{$NEXT}}

 - Enable support for libcurl at build-time
 - Users can now specify the libcurl to use as argument
    to Makefile.PL:
    + --with-curl-include
    + --with-curl-libs
 - Enable support for OS X's Security framework
 - Removed Remote methods: (Incompatible change)
    - save()
 - Remote -> create_anonymous() no longer accepts a 'fetch_refspecs' parameter (Incompatible change)

0.53      2015-04-14 20:23:42+02:00 Africa/Johannesburg

 - Update libgit2 to 623fbd9 (GH#161,GH#162)
 - Fixed reference counting issues in Diff, Commit and Merge::File::Result objects. (GH#160)
 - Added extra checkout flags. (GH#162)

0.52      2015-03-19 13:45:38+02:00 Africa/Johannesburg

 - Update libgit2 to 89ba9f1 (GH#158,GH#159)
 - The 'safe_create' checkout strategy has been removed from libgit2 (use 'safe') (Incompatible change)
 - Repository -> head() and Repository -> detach_head() no longer accept reflog messages (Incompatible change)
 - Repository -> merge() and friends' merge options 'flag' member has been
   renamed to 'tree_flags'. (Incompatible change) (GH#159)
 - Repository -> merge() and friends' merge options gained a 'file_flags' member. (GH#159)
 - Added additional file merge flags. (GH#159)

0.51      2015-02-09 09:55:03+02:00 Africa/Johannesburg

 - Update libgit2 to b703049 (GH#155, GH#156)
 - Removed Push package completely (GH#155) (Incompatible change):
    The functionality has been absorbed into the Remote package
 - Added Remote methods (GH#155):
    + prune()
    + push()
    + upload()
 - Added Remote callbacks (GH#155):
    + pack_progress
    + push_transfer_progress
    + push_update_reference

0.50      2014-11-15 20:10:04+02:00 Africa/Johannesburg

 - Update libgit2 to 057126c (GH#153)
 - Removed Remote methods (Incompatible change):
    + is_url_supported()
 - Removed Config methods (Incompatible change):
    + refresh()
 - Split Remote -> name into Remote -> name and Remote -> rename
   (Incompatible change)