@@ -8,6 +8,8 @@ Revision history for Git-Raw
     + --with-curl-include
     + --with-curl-libs
  - Enable support for OS X's Security framework
+ - Added Index::Entry methods:
+    + is_conflict()
  - Removed Remote methods: (Incompatible change)
     - save()
  - Remote -> create_anonymous() no longer accepts a 'fetch_refspecs' parameter (Incompatible change)
